docs: review personal experience section

--- a/report/rl_project.tex
+++ b/report/rl_project.tex
@@ -307,9 +307,9 @@ Lastly, experimenting with different attention mechanisms might enable more prec
 
 \section{Personal Experience}
 
-This project was both challenging and immensely rewarding. Initially planned as a group endeavor with three students, I had to proceed alone due to unresponsive peers. This shift to a solo effort required redefining the project's scope and timelines and necessitated negotiating an extension with our tutor.
+This project was both challenging and immensely rewarding. Initially planned as a group endeavor with three students, I had to proceed alone due to unresponsive peers. This shift to a solo effort required redefining the project's scope and timelines and requesting an extension with the Director of Studies.
 
-Working independently on this demanding project, alongside a full-time job and other personal personal commitments, presented significant stress and workload challenges. The depth of research and the extensive effort needed to implement and fine-tune the reinforcement learning models were at times overwhelming.
+Working independently on this demanding project, delayed coursework extension assessment decision, alongside a full-time job and other personal personal commitments, presented significant stress and workload challenges. The depth of research and the extensive effort needed to implement and fine-tune the reinforcement learning models were at times overwhelming.
 
 Despite these hurdles, the project was very satisfying. Engaging with the field of autonomous vehicles, an area I am passionate about, was particularly rewarding. The process of building, testing, and enhancing the DDQN model, and observing firsthand its improved performance, was gratifying.
 
